--- a/index.html
+++ b/index.html
@@ -8,37 +8,40 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    Rock Gardens
-    枯山水
-
-    Viewing
-    Gravel
-    Symbolism
+  <header role="banner">
+    <nav class="nav">
+      <h1>Rock Gardens 枯山水</h1>
+      <ul>
+        <li><a href="#viewing">Viewing</a></li>
+        <li><a href="#gravel">Gravel</a></li>
+        <li><a href="#symbolism">Symbolism</a></li>
+      </ul>
+    </nav>
+    <img src="images/banner.svg" alt="#">
   </header>
+
   <aside>
-    自然の親密な本質を模倣し、人生の真の意味を発見する。
-    Imitate the intimate essence of nature & discover the true meaning of life.
+    自然の親密な本質を模倣し、人生の真の意味を発見する。Imitate the intimate essence of nature & discover the true meaning of life.
   </aside>
 
-  <main>
-    閲覧
-    Viewing
-    A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo
-    Learn more about Viewing
+  <main role="main">
+    <img src="images/viewing.svg" alt="">
+    <h2 role="viewing">閲覧 Viewing</h2>
+      <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+    <a href="#">Learn more about Viewing<a>
 
-    砂利
-    Gravel
-    Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves
-    Learn more about Gravel
+    <img src="images/gravel.svg" alt="">
+    <h2 role="gravel">砂利 Gravel</h2>
+    <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves<p>
+    <a href="#">Learn more about Gravel</a>
 
-    象徴主義
-    Symbolism
-    In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp
-    Learn more about Symbolism
+    <img src="images/symbolism.svg" alt="">
+    <h2 role="symbolism">象徴主義 Symbolism</h2>
+    <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+    <a href="#">Learn more about Symbolism</a>
   </main>
 
-  <footer>
+  <footer role="contentinfo">
     © 794 Heian Period
   </footer>
 </body>
