--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
   <header role="banner">
-    <nav class="nav">
-      <h1>Rock Gardens 枯山水</h1>
+    <nav role="navigation">
+      <h1><i lang="ja">枯山水</i></h1>
+      <h2>Rock Gardens</h2>
       <ul>
         <li><a href="#viewing">Viewing</a></li>
         <li><a href="#gravel">Gravel</a></li>
@@ -21,22 +22,23 @@
   </header>
 
   <aside>
-    自然の親密な本質を模倣し、人生の真の意味を発見する。Imitate the intimate essence of nature & discover the true meaning of life.
+    <p><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></p>
+    <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
   </aside>
 
   <main role="main">
     <img src="images/viewing.svg" alt="">
-    <h2 role="viewing">閲覧 Viewing</h2>
-      <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
-    <a href="#">Learn more about Viewing<a>
+    <h2><i lang="ja">閲覧</i> Viewing</h2>
+    <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+    <a href="#">Learn more about Viewing</a>
 
     <img src="images/gravel.svg" alt="">
-    <h2 role="gravel">砂利 Gravel</h2>
-    <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves<p>
+    <h2><i lang="ja">砂利</i> Gravel</h2>
+    <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
     <a href="#">Learn more about Gravel</a>
 
     <img src="images/symbolism.svg" alt="">
-    <h2 role="symbolism">象徴主義 Symbolism</h2>
+    <h2><i lang="ja">象徴主義</i> Symbolism</h2>
     <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
     <a href="#">Learn more about Symbolism</a>
   </main>
