--- a/index.html
+++ b/index.html
@@ -28,23 +28,26 @@
 
   <main role="main">
     <img src="images/viewing.svg" alt="">
-    <h2><i lang="ja">閲覧</i> Viewing</h2>
+    <h2><i lang="ja">閲覧</i></h2>
+    <h3>Viewing</h3>
     <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
     <a href="#">Learn more about Viewing</a>
 
     <img src="images/gravel.svg" alt="">
-    <h2><i lang="ja">砂利</i> Gravel</h2>
+    <h2><i lang="ja">砂利</i></h2>
+    <h3>Gravel</h3>
     <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
     <a href="#">Learn more about Gravel</a>
 
     <img src="images/symbolism.svg" alt="">
-    <h2><i lang="ja">象徴主義</i> Symbolism</h2>
+    <h2><i lang="ja">象徴主義</i></h2>
+    <h3>Symbolism</h3>
     <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
     <a href="#">Learn more about Symbolism</a>
   </main>
 
   <footer role="contentinfo">
-    © 794 Heian Period
+    <p>© 794 Heian Period</p>
   </footer>
 </body>
 </html>
